correction de l'alignement de la grille principale

--- a/css/test.css
+++ b/css/test.css
@@ -233,6 +233,8 @@ h1 {
       font-weight: black;
       font-style: italic;
       text-align: center;
+      margin-right: 50px;
+      margin-top: -40px;
     }
 
 
